@@ -2994,6 +2994,9 @@
 			</Filter>
 		</Filter>
 		<File
+			RelativePath=".\endgamebox.cpp">
+		</File>
+		<File
 			RelativePath=".\resource.h">
 		</File>
 		<File
