@@ -7,6 +7,7 @@ TASpring change log
 - Fixed several exploits with FPS mode.
 - Added new fbi variable CanLoopbackAttack, only affects fighter aircrafts, if 1 this will enable the player to set the aircraft to do an immelman turn after firing instead of overflying the target.
 - Changed so units in maneuver mode will abort anything that moves them further than a certain distance from the patrol path
+- Added statistics to the end game dialog
 
 0.70b3
 
